removed empty rule sets

--- a/home-2.html
+++ b/home-2.html
@@ -195,7 +195,7 @@
                 <ul>
                     <li class="menu-item-has-children active"><a
                             href="https://html.themeholy.com/piller/demo/index.html">Home</a>
-                        <ul class="sub-menu th-submenu th-open" style="">
+                        <ul class="sub-menu th-submenu th-open" >
                             <li><a href="https://html.themeholy.com/piller/demo/index.html">Home Real Estate</a></li>
                             <li><a href="home-2.html">Home Property</a></li>
                             <li><a href="https://html.themeholy.com/piller/demo/home-3.html">Home Map</a></li>
